fix z-index / relative on Nouveau

--- a/SASS/components/_restaurant-card.scss
+++ b/SASS/components/_restaurant-card.scss
@@ -8,6 +8,7 @@
     max-width: 490px;
     background-color: white;
     border-radius: 15px;
+    position: relative;
 
     @media (min-width: 1024px) {
         max-width: 45%;
@@ -60,5 +61,6 @@
         padding: 6px;
         font-size: 14px;
         box-shadow: 0px 2px 4px 0px #00000026;
+        z-index: 2;
     }
 }
